# password-manager

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: ci.yml
include/: controller.hpp  password_manager.hpp  ui.hpp
src/: controller.cpp  password_manager.cpp  ui.cpp
tests/: test_ui.cpp
